@@ -1,6 +1,7 @@
 {{$NEXT}}
 
   * use_net_telnet_connection is checked even on Win32
+  * make add_library actually DTRT when you want both lib and add_lib
 
 1.111590  2011-06-08 23:26:09 Europe/London
 
